--- a/src/app/management/routes/salespeople/salesperson-manager.component.html
+++ b/src/app/management/routes/salespeople/salesperson-manager.component.html
@@ -15,31 +15,31 @@
     <table mat-table class="full-width-min" [dataSource]="items$">
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Nombre </th>
-        <td mat-cell *matCellDef="let seller">
-          {{ seller.person.name }}
+        <td mat-cell *matCellDef="let salesperson">
+          {{ salesperson.person.name }}
         </td>
       </ng-container>
       <ng-container matColumnDef="idCard">
         <th mat-header-cell *matHeaderCellDef> Rut </th>
-        <td mat-cell *matCellDef="let seller">
-          {{ seller.person.idCard }}
+        <td mat-cell *matCellDef="let salesperson">
+          {{ salesperson.person.idCard }}
         </td>
       </ng-container>
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef> </th>
-        <td mat-cell *matCellDef="let seller">
+        <td mat-cell *matCellDef="let salesperson">
           <button mat-button mat-icon-button type="button"
             *ngIf="canEdit$ | async"
             color="primary"
             [disabled]="busy$ | async"
-            (click)="onClickEdit(seller)">
+            (click)="onClickEdit(salesperson)">
             <mat-icon>edit</mat-icon>
           </button>
           <button mat-button mat-icon-button type="button"
             *ngIf="canDelete$ | async"
             color="warn"
             [disabled]="busy$ | async"
-            (click)="onClickDelete(seller)">
+            (click)="onClickDelete(salesperson)">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
