--- a/src/app/management/routes/images/management-images.component.html
+++ b/src/app/management/routes/images/management-images.component.html
@@ -10,7 +10,7 @@
 <div class="data-manager" [hidden]="loading$ | async">
   <div class="table-wrapper">
 
-    <table mat-table [dataSource]="items$">
+    <table mat-table [dataSource]="items$" matSort (matSortChange)="onSortChange($event)">
       <ng-container matColumnDef="thumb">
         <th mat-header-cell *matHeaderCellDef
           i18n="image|Name of table header for image preview">Image</th>
@@ -19,7 +19,7 @@
         </td>
       </ng-container>
       <ng-container matColumnDef="filename">
-        <th mat-header-cell *matHeaderCellDef
+        <th mat-header-cell *matHeaderCellDef mat-sort-header
           i18n="image filename|Name of table header for image filename">Filename</th>
         <td mat-cell *matCellDef="let image">
           {{ image.filename }}
