--- a/src/app/management/routes/salespeople/management-salespeople.component.html
+++ b/src/app/management/routes/salespeople/management-salespeople.component.html
@@ -10,16 +10,16 @@
 <div class="data-manager" [hidden]="loading$ | async">
   <div class="table-wrapper">
 
-    <table mat-table [dataSource]="items$">
+    <table mat-table [dataSource]="items$" matSort (matSortChange)="onSortChange($event)">
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef
+        <th mat-header-cell *matHeaderCellDef mat-sort-header
           i18n="person full name|Name of table header for full name of person">Name</th>
         <td mat-cell *matCellDef="let salesperson">
           {{ salesperson.person.firstName }} {{ salesperson.person.lastName }}
         </td>
       </ng-container>
       <ng-container matColumnDef="idNumber">
-        <th mat-header-cell *matHeaderCellDef
+        <th mat-header-cell *matHeaderCellDef mat-sort-header
           i18n="person id number|Name of table header for id number of person">Id number</th>
         <td mat-cell *matCellDef="let salesperson">
           {{ salesperson.person.idNumber }}
