--- a/src/app/management/routes/shippers/management-shippers.component.html
+++ b/src/app/management/routes/shippers/management-shippers.component.html
@@ -10,9 +10,9 @@
 <div class="data-manager" [hidden]="loading$ | async">
   <div class="table-wrapper">
 
-    <table mat-table [dataSource]="items$">
+    <table mat-table [dataSource]="items$" matSort (matSortChange)="onSortChange($event)">
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef
+        <th mat-header-cell *matHeaderCellDef mat-sort-header
           i18n="shipper name|Name of table header for name of shipper">Name</th>
         <td mat-cell *matCellDef="let shipper">
           {{ shipper.name }}
