--- a/src/app/management/routes/users/management-users.component.html
+++ b/src/app/management/routes/users/management-users.component.html
@@ -10,16 +10,16 @@
 <div class="data-manager" [hidden]="loading$ | async">
   <div class="table-wrapper">
 
-    <table mat-table [dataSource]="items$">
+    <table mat-table [dataSource]="items$" matSort (matSortChange)="onSortChange($event)">
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef
+        <th mat-header-cell *matHeaderCellDef mat-sort-header
           i18n="Name of table header for user name">User name</th>
         <td mat-cell *matCellDef="let user">
           {{ user.name }}
         </td>
       </ng-container>
       <ng-container matColumnDef="role">
-        <th mat-header-cell *matHeaderCellDef
+        <th mat-header-cell *matHeaderCellDef mat-sort-header
           i18n="Name of table header for user role name">Role</th>
         <td mat-cell *matCellDef="let user">
           {{ user.role }}
